--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 <body>
     <h1>Hello, World!</h1>
     <p>Welcome to my website.</p>
+    <p>My name is <strong>John Doe</strong>.</p>
+
 </body>
 </html>
